--- a/v2/patrodent/templates/instalaciones.html
+++ b/v2/patrodent/templates/instalaciones.html
@@ -14,7 +14,7 @@
                 <h4 class="margin-bot">Nuestras Instalaciones</h4>
                 <div class="wrapper indent-bot2">
                     <figure class="img-style img-indent">
-                        <iframe width="300" height="200" src="http://www.youtube.com/embed/5-JuMRmbmXo?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="300" height="200" src="https://www.youtube.com/embed/5-JuMRmbmXo?autoplay=1" frameborder="0" allowfullscreen></iframe>
                         <span class="afterBeforeText">Visita nuestras instalaciones interactivamente</span>
                     </figure>
                 </div>
@@ -44,7 +44,7 @@
 
 {% block footergallery %}
     <figure>
-        <a href="http://www.youtube.com/watch?v=5-JuMRmbmXo" target="_blank" title="Instalaciones de Patrodent">
+        <a href="https://www.youtube.com/watch?v=5-JuMRmbmXo" target="_blank" title="Instalaciones de Patrodent">
             <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
