--- a/v2/patrodent/templates/odontologia.html
+++ b/v2/patrodent/templates/odontologia.html
@@ -28,7 +28,7 @@
 {% block before-after-title %}
     <div class="wrapper indent-bot2">
         <figure class="img-style img-indent">
-            <iframe width="250" height="156" src="http://www.youtube.com/embed/sftZ6TXTO_o?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <iframe width="250" height="156" src="https://www.youtube.com/embed/sftZ6TXTO_o?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <span class="afterBeforeText"></span>
         </figure>
     </div>
