--- a/v2/patrodent/templates/quien_soy.html
+++ b/v2/patrodent/templates/quien_soy.html
@@ -10,7 +10,7 @@
 
 {% block footergallery %}
     <figure>
-        <a href="http://www.youtube.com/v/gt4ECC3SROg?autoplay=1" rel="shadowbox[quienSoy]" title="Títulos de Patrocinio Gómez">
+        <a href="https://www.youtube.com/v/gt4ECC3SROg?autoplay=1" rel="shadowbox[quienSoy]" title="Títulos de Patrocinio Gómez">
             <img src="{{ STATIC_URL }}images/titulos.min.jpg" alt="Títulos de Patrocinio Gómez" title="Títulos de Patrocinio Gómez" />
         </a>
     </figure>
@@ -46,7 +46,7 @@
                 <div class="clear"></div>
                 <div class="wrapper indent-bot2">
                     <figure class="img-style img-indent">
-                        <iframe width="300" height="200" src="http://www.youtube.com/embed/gt4ECC3SROg?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="300" height="200" src="https://www.youtube.com/embed/gt4ECC3SROg?autoplay=1" frameborder="0" allowfullscreen></iframe>
                         <span class="afterBeforeText">C.V. Interactivo</span>
                     </figure>
                 </div>
