--- a/v2/patrodent/templates/templates/formulario_contacto.html
+++ b/v2/patrodent/templates/templates/formulario_contacto.html
@@ -1,4 +1,4 @@
-<form action="http://www.123contactform.com/form-283841/Patrodent" class="form" enctype="multipart/form-data" id="mainform123" method="post" onsubmit="RefreshFrameHeight(1); return true;">
+<form action="https://www.123contactform.com/form-283841/Patrodent" class="form" enctype="multipart/form-data" id="mainform123" method="post" onsubmit="RefreshFrameHeight(1); return true;">
     <input name="action" type="hidden" value="verify"/>
     <input id="special_autoresponder" name="special_autoresponder" type="hidden" value=""/>
     <input name="language" type="hidden" value="en"/>
