--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -25,7 +25,7 @@
                             <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
                             <dd><span>Teléfono:</span><a class="link" href="tel:954 21 14 22">954 21 14 22</a></dd>
                             <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
-                            <dd><span>Facebook:</span><a class="link" href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
+                            <dd><span>Facebook:</span><a class="link" href="https://www.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                         </dl>
                     </div>
                     <div class="clear"></div>
@@ -49,7 +49,7 @@
     <div id="address_info" style="display:none">
         <div class="info" style="float: left">
             <h5> Clínica dental Patrodent </h5>
-            <a href="http://maps.google.es/maps?f=q&source=s_q&hl=es&geocode=&q=sevilla,+marques+de+paradas,+22&sll=40.396764,-3.713379&sspn=10.586993,23.203125&ie=UTF8&view=map" style="width: 220px; float:left">
+            <a href="https://maps.google.es/maps?f=q&source=s_q&hl=es&geocode=&q=sevilla,+marques+de+paradas,+22&sll=40.396764,-3.713379&sspn=10.586993,23.203125&ie=UTF8&view=map" style="width: 220px; float:left">
                 Calle Marqués de Paradas, 22
                 41001 Sevilla, Andalucía
             </a>
@@ -107,7 +107,7 @@
         document.write(unescape("%3Cscript src='" + cfJsHost + "www.123contactform.com/includes/interactive123cf.js?2480' type='text/javascript'%3E%3C/script%3E"));
     </script>
     <script src="{{ STATIC_URL }}js/jquery.googlemaps1.01.js" type="text/javascript"></script>
-    <script src="http://maps.google.com/maps?file=api&amp;v=3&amp;hl=es&amp;sensor=true&amp;key=AIzaSyAgfMglec3JH1xa-E_M13YolNAeM6N2p1s" type="text/javascript"></script>
+    <script src="https://maps.google.com/maps?file=api&amp;v=3&amp;hl=es&amp;sensor=true&amp;key=AIzaSyAgfMglec3JH1xa-E_M13YolNAeM6N2p1s" type="text/javascript"></script>
 <!--     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.9&sensor=true"></script> -->
     <script type="text/javascript">
         $(document).ready(function() {
@@ -127,7 +127,7 @@
                         },
                     }
                 });
-            if (document.referrer == "http://www.123contactform.com/form-283841/Patrodent" || document.location.href.indexOf("sucess") != -1) {
+            if (document.referrer == "https://www.123contactform.com/form-283841/Patrodent" || document.location.href.indexOf("sucess") != -1) {
                 alert("Email enviado con exito, nos pondremos en contacto lo más rapidamente posible")
             }
         });
