--- a/v2/patrodent/templates/implantes.html
+++ b/v2/patrodent/templates/implantes.html
@@ -34,7 +34,7 @@
     </div>
     <div class="wrapper indent-bot2">
         <figure class="img-style img-indent">
-            <a href="http://www.youtube.com/watch?v=M74Scwr4v7s" title="Video Implantes Dentales" target="_blank">
+            <a href="https://www.youtube.com/watch?v=M74Scwr4v7s" title="Video Implantes Dentales" target="_blank">
                 <img src="{{ STATIC_URL }}images/video_implantes.jpg" alt="Video Implantes Dentales" title="Video Implantes Dentales" />
             </a>
             <span class="afterBeforeText">Video Implantes Dentales</span>
