--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -93,7 +93,7 @@
         </a>
     </figure>
     <figure>
-        <a href="http://www.youtube.com/watch?v=5-JuMRmbmXo" target="_blank" title="Instalaciones de Patrodent">
+        <a href="https://www.youtube.com/watch?v=5-JuMRmbmXo" target="_blank" title="Instalaciones de Patrodent">
             <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
