--- a/v2/patrodent/templates/ortodoncia.html
+++ b/v2/patrodent/templates/ortodoncia.html
@@ -27,7 +27,7 @@
 {% block before-after-title %}
     <div class="wrapper indent-bot2">
         <figure class="img-style img-indent">
-            <iframe width="250" height="156" src="http://www.youtube.com/embed/7rjFl-wYP34?autoplay=1" frameborder="0" allowfullscreen></iframe>
+            <iframe width="250" height="156" src="https://www.youtube.com/embed/7rjFl-wYP34?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <span class="afterBeforeText"></span>
         </figure>
     </div>
