--- a/v2/patrodent/templates/quienes_somos.html
+++ b/v2/patrodent/templates/quienes_somos.html
@@ -30,7 +30,7 @@
         </a>
     </figure>
     <figure>
-        <a href="http://www.youtube.com/watch?v=gt4ECC3SROg" target="_blank" title="Títulos de Patrocinio Gómez">
+        <a href="https://www.youtube.com/watch?v=gt4ECC3SROg" target="_blank" title="Títulos de Patrocinio Gómez">
             <img src="{{ STATIC_URL }}images/titulos.min.jpg" alt="Títulos de Patrocinio Gómez" title="Títulos de Patrocinio Gómez" />
         </a>
     </figure>
