Cambio en el form de contacto

--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -127,7 +127,7 @@
                         },
                     }
                 });
-            if (document.referrer == "https://www.123contactform.com/form-283841/Patrodent" || document.location.href.indexOf("sucess") != -1) {
+            if (document.referrer == "https://www.123formbuilder.com/form-283841/Patrodent" || document.location.href.indexOf("sucess") != -1) {
                 alert("Email enviado con exito, nos pondremos en contacto lo más rapidamente posible")
             }
         });
