first changes to move to python 3 and django3

--- a/v2/patrodent/templates/antes_y_despues.html
+++ b/v2/patrodent/templates/antes_y_despues.html
@@ -1,5 +1,7 @@
 {% extends "templates/base.html" %}
 
+{% load static %}
+
 {% block title %}Antes y después - {% endblock %}
 
 {% block metadescription %}Casos reales de nuestros pacientes (antes y después){% endblock %}
@@ -33,7 +35,7 @@
             <div class="imgswrapper">
             {% include "templates/after_before/inc.protesis.html" %}
             <div class="wrapper indent-bot2 afterAndBefore">
-                <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/protesis_despues_3.jpg" alt="Caso real protesis" title="Caso real protesis" class="after" />
+                <figure class="img-style img-indent"><img src="{% static 'images/protesis_despues_3.jpg' %}" alt="Caso real protesis" title="Caso real protesis" class="after" />
                     <span class="afterBeforeText">Después</span>
                 </figure>
             </div>
@@ -42,7 +44,7 @@
             <h4>Estética y blanqueamiento dental</h4>
             <div class="imgswrapper">
             <div class="wrapper indent-bot2 afterAndBefore">
-                <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/estetica_despues_4.jpg" alt="Caso real odontología conservadora" title="Caso real odontología conservadora" class="after" />
+                <figure class="img-style img-indent"><img src="{% static 'images/estetica_despues_4.jpg' %}" alt="Caso real odontología conservadora" title="Caso real odontología conservadora" class="after" />
                     <span class="afterBeforeText">Después</span>
                 </figure>
             </div>
@@ -66,34 +68,34 @@
 
 {% block footergallery %}
     <figure>
-        <a href="{{ STATIC_URL }}images/ortodoncia_caso_antes3.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
-            <img src="{{ STATIC_URL }}images/ortodoncia_caso_antes3.min.jpg" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
+        <a href="{% static 'images/ortodoncia_caso_antes3.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+            <img src="{% static 'images/ortodoncia_caso_antes3.min.jpg' %}" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/ortodoncia_caso_antes1.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
-            <img src="{{ STATIC_URL }}images/ortodoncia_caso_antes1.min.jpg" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
+        <a href="{% static 'images/ortodoncia_caso_antes1.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+            <img src="{% static 'images/ortodoncia_caso_antes1.min.jpg' %}" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/ortodoncia_caso_antes2.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
-            <img src="{{ STATIC_URL }}images/ortodoncia_caso_antes2.min.jpg" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
+        <a href="{% static 'images/ortodoncia_caso_antes2.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (antes)">
+            <img src="{% static 'images/ortodoncia_caso_antes2.min.jpg' %}" alt="Ortodoncia caso real (antes)" title="Ortodoncia caso real (antes)" />
         </a>
     </figure>
     <div class="clear"></div>
     <figure>
-        <a href="{{ STATIC_URL }}images/ortodoncia_caso_despues2.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
-            <img src="{{ STATIC_URL }}images/ortodoncia_caso_despues2.min.jpg" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
+        <a href="{% static 'images/ortodoncia_caso_despues2.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+            <img src="{% static 'images/ortodoncia_caso_despues2.min.jpg' %}" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/ortodoncia_caso_despues1.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
-            <img src="{{ STATIC_URL }}images/ortodoncia_caso_despues1.min.jpg" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
+        <a href="{% static 'images/ortodoncia_caso_despues1.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+            <img src="{% static 'images/ortodoncia_caso_despues1.min.jpg' %}" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/ortodoncia_caso_despues3.jpg" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
-            <img src="{{ STATIC_URL }}images/ortodoncia_caso_despues3.min.jpg" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
+        <a href="{% static 'images/ortodoncia_caso_despues3.jpg' %}" rel="shadowbox[antes_y_despues]" title="Ortodoncia caso real (después)">
+            <img src="{% static 'images/ortodoncia_caso_despues3.min.jpg' %}" alt="Ortodoncia caso real (después)" title="Ortodoncia caso real (después)" />
         </a>
     </figure>
 {% endblock %}
@@ -101,7 +103,7 @@
 
 {% block footerjs %}
     {{ block.super }}
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.swap-images.js"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.swap-images.js' %}"></script>
     <script type="text/javascript">
         (function($){
             $(document).ready(function () {
