--- a/v2/patrodent/templates/templates/servicio.html
+++ b/v2/patrodent/templates/templates/servicio.html
@@ -1,11 +1,11 @@
 {% extends "templates/base.html" %}
-
+{% load static %}
 {% block class-servicios-link %} active{% endblock %}
 
 {% block footerjs %}
     {{ block.super }}
     {% block js-after-before %}
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.swap-images.js"></script>
+        <script type="text/javascript" src="{% static 'js/jquery.swap-images.js' %}"></script>
         <script type="text/javascript">
             (function($){
                 $(document).ready(function () {
@@ -54,18 +54,18 @@
                 {% block before-after %}
                     <div class="wrapper indent-bot2">
                         <figure class="img-style img-indent">
-                            <img src="{{ STATIC_URL }}images/limpieza_despues.jpg" class="after" />
+                            <img src="{% static 'images/limpieza_despues.jpg' %}" class="after" alt="" />
                             <span class="afterBeforeText">Después</span>
                         </figure>
-                        <figure class="img-style"><img src="{{ STATIC_URL }}images/periodoncia_despues2.jpg" alt="" class="after" />
+                        <figure class="img-style"><img src="{% static 'images/periodoncia_despues2.jpg' %}" alt="" class="after" />
                             <span class="afterBeforeText">Después</span>
                         </figure>
                     </div>
                     <div class="wrapper indent-bot2">
-                        <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/limpieza_despues.jpg" alt="" class="after" />
+                        <figure class="img-style img-indent"><img src="{% static 'images/limpieza_despues.jpg' %}" alt="" class="after" />
                             <span class="afterBeforeText">Después</span>
                         </figure>
-                        <figure class="img-style"><img src="{{ STATIC_URL }}images/periodoncia_despues2.jpg" alt="" class="after" />
+                        <figure class="img-style"><img src="{% static 'images/periodoncia_despues2.jpg' %}" alt="" class="after" />
                             <span class="afterBeforeText">Después</span>
                         </figure>
                     </div>
@@ -79,28 +79,28 @@
 
 {% block footergallery %}
     <figure>
-        <a href="{{ STATIC_URL }}images/equipo_trabajando.jpg" rel="shadowbox[servicio]" title="Equipo trabajando">
-            <img src="{{ STATIC_URL }}images/equipo_trabajando.min.jpg" alt="Equipo trabajando" title="Equipo trabajando" />
+        <a href="{% static 'images/equipo_trabajando.jpg' %}" rel="shadowbox[servicio]" title="Equipo trabajando">
+            <img src="{% static 'images/equipo_trabajando.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/equipo_trabajando2.jpg" rel="shadowbox[servicio]" title="Equipo trabajando">
-            <img src="{{ STATIC_URL }}images/equipo_trabajando2.min.jpg" alt="Equipo trabajando" title="Equipo trabajando" />
+        <a href="{% static 'images/equipo_trabajando2.jpg' %}" rel="shadowbox[servicio]" title="Equipo trabajando">
+            <img src="{% static 'images/equipo_trabajando2.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/patrocinio_trabajando.jpg" rel="shadowbox[servicio]" title="Patrocinio trabajando">
-            <img src="{{ STATIC_URL }}images/patrocinio_trabajando.min.jpg" alt="Patrocinio diagnosticando" title="Patrocinio trabajando" />
+        <a href="{% static 'images/patrocinio_trabajando.jpg' %}" rel="shadowbox[servicio]" title="Patrocinio trabajando">
+            <img src="{% static 'images/patrocinio_trabajando.min.jpg' %}" alt="Patrocinio diagnosticando" title="Patrocinio trabajando" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/consulta2.jpg" rel="shadowbox[servicio]" title="Imágen de la consulta">
-            <img src="{{ STATIC_URL }}images/consulta2.min.jpg" alt="Imágen de la consulta" title="Imágen de la consulta" />
+        <a href="{% static 'images/consulta2.jpg' %}" rel="shadowbox[servicio]" title="Imágen de la consulta">
+            <img src="{% static 'images/consulta2.min.jpg' %}" alt="Imágen de la consulta" title="Imágen de la consulta" />
         </a>
     </figure>
     <figure>
         <a href="https://www.youtube.com/watch?v=5-JuMRmbmXo" target="_blank" title="Instalaciones de Patrodent">
-            <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
+            <img src="{% static 'images/instalaciones.min.jpg' %}" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
 {% endblock %}
