--- a/v2/patrodent/templates/contacto.html
+++ b/v2/patrodent/templates/contacto.html
@@ -1,5 +1,7 @@
 {% extends "templates/base.html" %}
 
+{% load static %}
+
 {% block title %}Contacta con nosotros - {% endblock %}
 
 {% block metadescription %}Como contactar con la Clínica Dental Patrocinio Gómez Martínez (Patrodent){% endblock %}
@@ -60,28 +62,28 @@
 
 {% block footergallery %}
     <figure>
-        <a href="{{ STATIC_URL }}images/recepcion1.jpg" rel="shadowbox[index]" title="Recepción">
-            <img src="{{ STATIC_URL }}images/recepcion1.min.jpg" alt="Recepción" title="Recepción" />
+        <a href="{% static 'images/recepcion1.jpg' %}" rel="shadowbox[index]" title="Recepción">
+            <img src="{% static 'images/recepcion1.min.jpg' %}" alt="Recepción" title="Recepción" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/recepcion2.jpg" rel="shadowbox[index]" title="Recepción">
-            <img src="{{ STATIC_URL }}images/recepcion2.min.jpg" alt="Recepción" title="Recepción" />
+        <a href="{% static 'images/recepcion2.jpg' %}" rel="shadowbox[index]" title="Recepción">
+            <img src="{% static 'images/recepcion2.min.jpg' %}" alt="Recepción" title="Recepción" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/reloj.jpg" rel="shadowbox[index]" title="Reloj">
-            <img src="{{ STATIC_URL }}images/reloj.min.jpg" alt="Reloj" title="Reloj" />
+        <a href="{% static 'images/reloj.jpg' %}" rel="shadowbox[index]" title="Reloj">
+            <img src="{% static 'images/reloj.min.jpg' %}" alt="Reloj" title="Reloj" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/pasillo.jpg" rel="shadowbox[index]" title="Pasillo de la consulta">
-            <img src="{{ STATIC_URL }}images/pasillo.min.jpg" alt="Pasillo de la consulta" title="Pasillo de la consulta" />
+        <a href="{% static 'images/pasillo.jpg' %}" rel="shadowbox[index]" title="Pasillo de la consulta">
+            <img src="{% static 'images/pasillo.min.jpg' %}" alt="Pasillo de la consulta" title="Pasillo de la consulta" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/despacho.jpg" rel="shadowbox[index]" title="Despacho">
-            <img src="{{ STATIC_URL }}images/despacho.min.jpg" alt="Despacho" title="Despacho" />
+        <a href="{% static 'images/despacho.jpg' %}" rel="shadowbox[index]" title="Despacho">
+            <img src="{% static 'images/despacho.min.jpg' %}" alt="Despacho" title="Despacho" />
         </a>
     </figure>
 {% endblock %}
@@ -106,7 +108,7 @@
         var cfJsHost = (("https:" == document.location.protocol) ? "https://" : "http://");
         document.write(unescape("%3Cscript src='" + cfJsHost + "www.123contactform.com/includes/interactive123cf.js?2480' type='text/javascript'%3E%3C/script%3E"));
     </script>
-    <script src="{{ STATIC_URL }}js/jquery.googlemaps1.01.js" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.googlemaps1.01.js' %}" type="text/javascript"></script>
     <script src="https://maps.google.com/maps?file=api&amp;v=3&amp;hl=es&amp;sensor=true&amp;key=AIzaSyAgfMglec3JH1xa-E_M13YolNAeM6N2p1s" type="text/javascript"></script>
 <!--     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3.9&sensor=true"></script> -->
     <script type="text/javascript">
