--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -1,9 +1,10 @@
 {% extends "templates/base.html" %}
+{% load static %}
 
 {% block js %}
     {{ block.super }}
-    <script src="{{ STATIC_URL }}js/tms-0.3.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/tms_presets.js" type="text/javascript"></script>
+    <script src="{% static 'js/tms-0.3.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/tms_presets.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block pageclass %}index{% endblock %}
@@ -30,13 +31,13 @@
                 <div class="slider-wrapper">
                     <div class="slider">
                         <ul class="items">
-                            <li><img src="{{ STATIC_URL }}images/logo_galeria.png" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/patrocinio_y_angela.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/sala_de_esperas.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/recepcion3.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/cristal.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/patrocinio_y_angela2.jpg" alt=""></li>
-                            <li><img src="{{ STATIC_URL }}images/equipo.jpg" alt=""></li>
+                            <li><img src="{% static 'images/logo_galeria.png' %}" alt=""></li>
+                            <li><img src="{% static 'images/patrocinio_y_angela.jpg' %}" alt=""></li>
+                            <li><img src="{% static 'images/sala_de_esperas.jpg' %}" alt=""></li>
+                            <li><img src="{% static 'images/recepcion3.jpg' %}" alt=""></li>
+                            <li><img src="{% static 'images/cristal.jpg' %}" alt=""></li>
+                            <li><img src="{% static 'images/patrocinio_y_angela2.jpg' %}" alt=""></li>
+                            <li><img src="{% static 'images/equipo.jpg' %}" alt=""></li>
                         </ul>
                         <ul class="pagination">
                             <li><a href="#"><span>1</span></a></li>
@@ -58,43 +59,43 @@
             <p class="p3">Contamos con un sistema de financiación, que le será totalmente de su agrado. Dado el carácter particular de cada paciente no es posible dar un presupuesto estándar sin estudiar detenidamente el tratamiento individual de cada paciente. Por ello le invitamos a visitar nuestra clínica para concertar una cita o déjenos sus datos y nosotros le llamaremos.</p>
         </div>
         <div class="grid_6 grid_65 suffix_1">
-            <h4 class="p3"><a href="{% url template_view "tratamientos" %}">Nuestros Tratamientos</a></h4>
+            <h4 class="p3"><a href="{% url 'template_view' "tratamientos" %}">Nuestros Tratamientos</a></h4>
             <ul class="list-1 p3">
                 {% include "templates/inc.tratamientos.html" %}
             </ul>
         </div>
         <div class="grid_7 suffix_1 omega">
             <h4 class="p3">Renovandonos por ti...</h4>
-            <blockquote><p>Nuestra vocación es ofrecer un excelente servicio y atención a nuestros pacientes para que queden totalmente satisfechos. Por ello, nos renovamos día a día intentando superarnos en nuestros logros; renovando la imágen de <a href="{% url template_view "instalaciones" %}"> nuestra clínica</a> que le invitamos a conocer.</p>
-            <p>Nuestro <a href="{% url template_view "quienes_somos" %}">equipo humano</a> muy cualificado está a su disposición para ayudarle a resolver todas sus consultas en cualquier momento.”</p></blockquote>
+            <blockquote><p>Nuestra vocación es ofrecer un excelente servicio y atención a nuestros pacientes para que queden totalmente satisfechos. Por ello, nos renovamos día a día intentando superarnos en nuestros logros; renovando la imágen de <a href="{% url 'template_view' "instalaciones" %}"> nuestra clínica</a> que le invitamos a conocer.</p>
+            <p>Nuestro <a href="{% url 'template_view' "quienes_somos" %}">equipo humano</a> muy cualificado está a su disposición para ayudarle a resolver todas sus consultas en cualquier momento.”</p></blockquote>
         </div>
     </div>
 {% endblock %}
 
 {% block footergallery %}
     <figure>
-        <a href="{{ STATIC_URL }}images/equipo_trabajando2.jpg" rel="shadowbox[index]" title="Equipo trabajando">
-            <img src="{{ STATIC_URL }}images/equipo_trabajando2.min.jpg" alt="Equipo trabajando" title="Equipo trabajando" />
+        <a href="{% static 'images/equipo_trabajando2.jpg' %}" rel="shadowbox[index]" title="Equipo trabajando">
+            <img src="{% static 'images/equipo_trabajando2.min.jpg' %}" alt="Equipo trabajando" title="Equipo trabajando" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/consulta1.jpg" rel="shadowbox[index]" title="Imágen de la consulta">
-            <img src="{{ STATIC_URL }}images/consulta1.min.jpg" alt="Imágen de la consulta" title="Imágen de la consulta" />
+        <a href="{% static 'images/consulta1.jpg' %}" rel="shadowbox[index]" title="Imágen de la consulta">
+            <img src="{% static 'images/consulta1.min.jpg' %}" alt="Imágen de la consulta" title="Imágen de la consulta" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/patrocinio_tv.jpg" rel="shadowbox[index]" title="Patrocinio diagnosticando">
-            <img src="{{ STATIC_URL }}images/patrocinio_tv.min.jpg" alt="Patrocinio diagnosticando" title="Patrocinio diagnosticando" />
+        <a href="{% static 'images/patrocinio_tv.jpg' %}" rel="shadowbox[index]" title="Patrocinio diagnosticando">
+            <img src="{% static 'images/patrocinio_tv.min.jpg' %}" alt="Patrocinio diagnosticando" title="Patrocinio diagnosticando" />
         </a>
     </figure>
     <figure>
-        <a href="{{ STATIC_URL }}images/consulta2.jpg" rel="shadowbox[index]" title="Imágen de la consulta">
-            <img src="{{ STATIC_URL }}images/consulta2.min.jpg" alt="Imágen de la consulta" title="Imágen de la consulta" />
+        <a href="{% static 'images/consulta2.jpg' %}" rel="shadowbox[index]" title="Imágen de la consulta">
+            <img src="{% static 'images/consulta2.min.jpg' %}" alt="Imágen de la consulta" title="Imágen de la consulta" />
         </a>
     </figure>
     <figure>
         <a href="https://www.youtube.com/watch?v=5-JuMRmbmXo" target="_blank" title="Instalaciones de Patrodent">
-            <img src="{{ STATIC_URL }}images/instalaciones.min.jpg" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
+            <img src="{% static 'images/instalaciones.min.jpg' %}" alt="Instalaciones de Patrodent" title="Instalaciones de Patrodent" />
         </a>
     </figure>
 {% endblock %}
