--- a/v2/patrodent/templates/templates/after_before/inc.ortodoncia.html
+++ b/v2/patrodent/templates/templates/after_before/inc.ortodoncia.html
@@ -1,16 +1,17 @@
+{% load static %}
 <div class="wrapper indent-bot2 afterAndBefore">
-    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_4.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
+    <figure class="img-style img-indent"><img src="{% static 'images/ortodoncia_despues_4.jpg' %}" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
 <div class="wrapper indent-bot2 afterAndBefore">
-    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_1.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
+    <figure class="img-style img-indent"><img src="{% static 'images/ortodoncia_despues_1.jpg' %}" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
 {% if all %}
 <div class="wrapper indent-bot2 afterAndBefore">
-    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/ortodoncia_despues_3.jpg" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
+    <figure class="img-style img-indent"><img src="{% static 'images/ortodoncia_despues_3.jpg' %}" alt="Caso real ortodoncia" title="Caso real ortodoncia" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
