--- a/v2/patrodent/templates/templates/after_before/inc.periodoncia.html
+++ b/v2/patrodent/templates/templates/after_before/inc.periodoncia.html
@@ -1,15 +1,16 @@
+{% load static %}
 <div class="wrapper indent-bot2 afterAndBefore">
-    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/periodoncia_despues.jpg" alt="Caso real periodoncia" title="Caso real periodoncia" class="after" />
+    <figure class="img-style img-indent"><img src="{% static 'images/periodoncia_despues.jpg' %}" alt="Caso real periodoncia" title="Caso real periodoncia" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
 <div class="wrapper indent-bot2 afterAndBefore">
-    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/periodoncia_despues2.jpg" alt="Caso real periodoncia" title="Caso real periodoncia" class="after" />
+    <figure class="img-style img-indent"><img src="{% static 'images/periodoncia_despues2.jpg' %}" alt="Caso real periodoncia" title="Caso real periodoncia" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
 <div class="wrapper indent-bot2 afterAndBefore">
-    <figure class="img-style img-indent"><img src="{{ STATIC_URL }}images/periodoncia_despues4.jpg" alt="Caso real periodoncia" title="Caso real periodoncia" class="after" />
+    <figure class="img-style img-indent"><img src="{% static 'images/periodoncia_despues4.jpg' %}" alt="Caso real periodoncia" title="Caso real periodoncia" class="after" />
         <span class="afterBeforeText">Después</span>
     </figure>
 </div>
