--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -1,3 +1,4 @@
+{%  load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,29 +6,29 @@
     <title>{% block title %}{% endblock %}Clínica Dental Patrodent</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link type="image/gif" href="{{ STATIC_URL }}images/favicon.ico" rel="shortcut icon" />
+    <link type="image/gif" href="{% static 'images/favicon.ico' %}" rel="shortcut icon" />
     <meta name="Keywords" content="{% block keywords %}Dentistas en Sevilla, Dentistas, Sevilla, Odontologos Sevilla, Odontologos, Dentistas plaza de armas, Denstistas centro de Sevilla, Clinica Dental Sevilla, Clinica Dental, Ortodoncia Sevilla, Ortodoncia, Odontología Sevilla, Odontologia, ATM, Periodoncia, ATM Sevilla, Periodoncia Sevilla, plaza de armas{% endblock %}">
     <meta name="Description" content="{% block metadescription %}Clínica Dental Patrocinio Gómez Martínez C/ Marques de Paradas nº 22 1 º dcha Sevilla (junto a plaza de armas){% endblock %}">
    {% block css %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="all">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/grid.css" type="text/css" media="all">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/animate-flip.css" type="text/css" media="all">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/shadowbox.css" type="text/css" media="all">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/superfish.css" media="all">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2" type="text/css" media="all">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}" type="text/css" media="all">
+    <link rel="stylesheet" href="{% static 'css/grid.css' %}" type="text/css" media="all">
+    <link rel="stylesheet" href="{% static 'css/animate-flip.css' %}" type="text/css" media="all">
+    <link rel="stylesheet" href="{% static 'css/shadowbox.css' %}" type="text/css" media="all">
+    <link rel="stylesheet" href="{% static 'css/superfish.css' %}" media="all">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all">
    {% endblock %}
    {% block js %}
-    <script src="{{ STATIC_URL }}js/jquery-1.7.2.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/hoverIntent.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/cufon-yui.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/cufon-replace.js" type="text/javascript"></script> 
-    <script src="{{ STATIC_URL }}js/superfish.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/FF-cash.js" type="text/javascript"></script> 
-    <script src="{{ STATIC_URL }}js/script.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/Angelina_400.font.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/jquery.easing.1.3.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/shadowbox.js" type="text/javascript"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.detect-mobile.js"></script>
+    <script src="{% static 'js/jquery-1.7.2.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/hoverIntent.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/cufon-yui.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/cufon-replace.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/superfish.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/FF-cash.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/Angelina_400.font.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.easing.1.3.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/shadowbox.js' %}" type="text/javascript"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.detect-mobile.js' %}"></script>
     <script type="text/javascript">
         (function($){
             $(document).ready(function () {
@@ -98,8 +99,8 @@
         </div>
     <![endif]-->
     <!--[if lt IE 9]>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js"></script>
-        <link rel="stylesheet" href="css/ie.css" type="text/css" media="screen">
+        <script type="text/javascript" src="{% static 'js/html5.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'css/ie.css' %}" type="text/css" media="screen">
     <![endif]-->
    {% endblock %}
    {% block extrahead %}
@@ -113,28 +114,28 @@
         <a href="#" id="pull">Menu</a>
         <ul class="responsiveNav">
             <li class="index">
-                <a href="{% url template_view "index" %}" class="{% block class-patrodent-link2 %}{% endblock %}">Clínica</a>
+                <a href="{% url 'template_view' 'index' %}" class="{% block class-patrodent-link2 %}{% endblock %}">Clínica</a>
                 <ul>
-                    <li class="whoWeAre"><a href="{% url template_view "quienes_somos" %}">Quienes somos</a></li>
-                    <li class="KnowUs"><a href="{% url template_view "conocenos" %}">Conócenos</a></li>
-                    <li class="Place"><a href="{% url template_view "instalaciones" %}">Instalaciones</a></li>
+                    <li class="whoWeAre"><a href="{% url 'template_view' 'quienes_somos' %}">Quienes somos</a></li>
+                    <li class="KnowUs"><a href="{% url 'template_view' "conocenos" %}">Conócenos</a></li>
+                    <li class="Place"><a href="{% url 'template_view' "instalaciones" %}">Instalaciones</a></li>
                 </ul>
             </li>
             <li class="services">
-                <a href="{% url template_view "servicios" %}" class="{% block class-servicios-link2 %}{% endblock %}">Servicios</a>
+                <a href="{% url 'template_view' "servicios" %}" class="{% block class-servicios-link2 %}{% endblock %}">Servicios</a>
                 <ul>
                     {% include "templates/inc.servicios.html" %}
                 </ul>
             </li>
             <li class="treatments">
-                <a href="{% url template_view "tratamientos" %}" class="{% block class-tratamientos-link2 %}{% endblock %}">Tratamientos</a>
+                <a href="{% url 'template_view' "tratamientos" %}" class="{% block class-tratamientos-link2 %}{% endblock %}">Tratamientos</a>
                 <ul>
                     {% include "templates/inc.tratamientos.html" %}
                 </ul>
             </li>
-            <li class="beforeAfter"><a href="{% url template_view "antes_y_despues" %}" class="{% block class-antes-despues-link2 %}{% endblock %}">Antes y despues</a></li>
+            <li class="beforeAfter"><a href="{% url 'template_view' "antes_y_despues" %}" class="{% block class-antes-despues-link2 %}{% endblock %}">Antes y despues</a></li>
             <li class="contact">
-                <a href="{% url template_view "contacto" %}" class="{% block class-contacto-link2 %}{% endblock %}">Contacto</a>
+                <a href="{% url 'template_view' "contacto" %}" class="{% block class-contacto-link2 %}{% endblock %}">Contacto</a>
                 <ul>
                     <li class="hideWhatsapp">
                         <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
@@ -155,7 +156,7 @@
                 
                 <div class="grid_24">
                     <h1 class="sign">
-                        <a href="index.html">
+                        <a href="{% url 'template_view' 'index' %}">
                             Clinica Dental Patrodent
                         </a>
                     </h1>
@@ -170,28 +171,28 @@
                             {% block nav %}
                                 <ul class="menu">
                                     <li>
-                                        <a href="{% url template_view "index" %}" class="{% block class-patrodent-link %}{% endblock %}">Clínica</a>
+                                        <a href="{% url 'template_view' "index" %}" class="{% block class-patrodent-link %}{% endblock %}">Clínica</a>
                                         <ul>
-                                            <li><a href="{% url template_view "quienes_somos" %}">Quienes somos</a></li>
-                                            <li class="KnowUs"><a href="{% url template_view "conocenos" %}">Conocenos</a></li>
-                                            <li><a href="{% url template_view "instalaciones" %}">Instalaciones</a></li>
+                                            <li><a href="{% url 'template_view' "quienes_somos" %}">Quienes somos</a></li>
+                                            <li class="KnowUs"><a href="{% url 'template_view' "conocenos" %}">Conocenos</a></li>
+                                            <li><a href="{% url 'template_view' "instalaciones" %}">Instalaciones</a></li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="{% url template_view "servicios" %}" class="{% block class-servicios-link %}{% endblock %}">Servicios</a>
+                                        <a href="{% url 'template_view' "servicios" %}" class="{% block class-servicios-link %}{% endblock %}">Servicios</a>
                                         <ul style="width:250px">
                                             {% include "templates/inc.servicios.html" %}
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="{% url template_view "tratamientos" %}" class="{% block class-tratamientos-link %}{% endblock %}">Tratamientos</a>
+                                        <a href="{% url 'template_view' "tratamientos" %}" class="{% block class-tratamientos-link %}{% endblock %}">Tratamientos</a>
                                         <ul style="width:250px">
                                             {% include "templates/inc.tratamientos.html" %}
                                         </ul>
                                     </li>
-                                    <li><a href="{% url template_view "antes_y_despues" %}" class="{% block class-antes-despues-link %}{% endblock %}">Antes y despues</a></li>
+                                    <li><a href="{% url 'template_view' "antes_y_despues" %}" class="{% block class-antes-despues-link %}{% endblock %}">Antes y despues</a></li>
                                     <li>
-                                        <a href="{% url template_view "contacto" %}" class="{% block class-contacto-link %}{% endblock %}">Contacto</a>
+                                        <a href="{% url 'template_view' "contacto" %}" class="{% block class-contacto-link %}{% endblock %}">Contacto</a>
                                         <ul>
                                             <li class="hideWhatsapp">
                                                 <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20quisiera%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
@@ -248,28 +249,28 @@
                                 <div class="wrapper">
                                    {% block footergallery %}
                                     <figure>
-                                        <a href="{{ STATIC_URL }}images/patrocinio.jpg" rel="shadowbox[Vacation];" title="My Image">
-                                            <img src="{{ STATIC_URL }}images/footer-img1.jpg" alt="" />
+                                        <a href="{% static 'images/patrocinio.jpg' %}" rel="shadowbox[Vacation];" title="My Image">
+                                            <img src="{% static 'images/footer-img1.jpg' %}" alt="" />
                                         </a>
                                     </figure>
                                     <figure>
-                                        <a href="{{ STATIC_URL }}images/footer-img2.jpg" rel="shadowbox[Vacation];" title="pepep pep pop">
-                                            <img src="{{ STATIC_URL }}images/footer-img2.jpg" alt="" />
+                                        <a href="{% static 'images/footer-img2.jpg' %}" rel="shadowbox[Vacation];" title="pepep pep pop">
+                                            <img src="{% static 'images/footer-img2.jpg' %}" alt="" />
                                         </a>
                                     </figure>
                                     <figure>
-                                        <a href="{{ STATIC_URL }}images/footer-img3.jpg" rel="shadowbox">
-                                            <img src="{{ STATIC_URL }}images/footer-img3.jpg" alt="" />
+                                        <a href="{% static 'images/footer-img3.jpg' %}" rel="shadowbox">
+                                            <img src="{% static 'images/footer-img3.jpg' %}" alt="" />
                                         </a>
                                     </figure>
                                     <figure>
-                                        <a href="{{ STATIC_URL }}images/footer-img1.jpg" rel="shadowbox">
-                                            <img src="{{ STATIC_URL }}images/footer-img1.jpg" alt="" />
+                                        <a href="{% static 'images/footer-img1.jpg' %}" rel="shadowbox">
+                                            <img src="{% static 'images/footer-img1.jpg' %}" alt="" />
                                         </a>
                                     </figure>
                                     <figure>
-                                        <a href="{{ STATIC_URL }}images/footer-img2.jpg" rel="shadowbox">
-                                            <img src="{{ STATIC_URL }}images/footer-img2.jpg" alt="" />
+                                        <a href="{% static 'images/footer-img2.jpg' %}" rel="shadowbox">
+                                            <img src="{% static 'images/footer-img2.jpg' %}" alt="" />
                                         </a>
                                     </figure>
                                    {% endblock %}
